--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,1 @@
-/obj
-/jos.in
-/jos.log
-/jos.out
-/jos.out.*
-/jos.cmd
-/.gdbinit
-/wget.log
-/qemu.pcap
-/qemu.pcap.*
-/qemu.out
-/qemu.log
-/gradelib.pyc
-/lab*-handin.tar.gz
-/lab?/
-/sol?/
-/myapi.key
-/.suf
-
-/__pycache__/
+.vscode
